# Foxhole-Logistics-Dashboard

./: README.md  pyproject.toml
backend/: .env  .env.example  alembic.ini  pyproject.toml
src/foxhole-logi-dash/: foxhole.json
